--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "ebash",
+  "name": "rac-ui",
   "description": "tool to create create command lines",
-  "author": "juk",
-  "version": "1.0.0",
+  "author": "Glushkov Ilia",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/FusionWorks/ebash.git"
+    "url": "https://github.com/mfedorov/nebulent-rac-ui.git"
   },
   "keywords": [
-    "bash"
+    "car",
+    "rental",
+    "marionette",
+    "requirejs",
+    "gulp",
+    "nodejs"
   ],
   "main": "app.coffee",
   "scripts": {
@@ -57,6 +62,7 @@
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-wrap-amd": "^0.4.1",
+    "http-proxy": "^1.11.1",
     "jade": "^1.9.1",
     "jquery": "^2.1.3",
     "jquery-ui": "^1.10.5",
