--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "passport-twitter": "^1.0.2",
     "request": "^2.55.0",
     "requirejs": "^2.1.16",
+    "session-file-store": "0.0.13",
     "underscore": "^1.8.2"
   }
 }
