--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "backbone.stickit": "^0.9.2",
     "body-parser": "^1.17.2",
     "bootstrap-sass": "^3.3.7",
-    "coffee-script": "^1.12.7",
+    "coffeescript": "^2.3.2",
     "cookie-parser": "^1.4.3",
     "del": "^1.2.1",
     "domready": "^1.0.8",
